--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-  background-color: #5a0901;
+  background-color: #464683;
   padding: 15px;
 }
 header img {
@@ -66,7 +66,7 @@ nav .fa-bars {
 }
 
 footer {
-  background-color: #5a0901;
+  background-color: #464683;
   padding: 20px;
   position: absolute;
   bottom: 0;
@@ -152,10 +152,8 @@ h2 {
 }
 
 #cart {
-  background-color: #f3eaf1;
   margin: 60px 150px 200px 150px;
   border-radius: 15px;
-  padding: 20px;
   padding-bottom: 60px;
 }
 
@@ -180,9 +178,47 @@ h2 {
 #total {
   margin-top: 30px;
   text-align: center;
+  background-color: #464683;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 20px 0 20px 0;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
-#contact p, #yourCart p {
+#contact p {
+  text-align: center;
+  background-color: #464683;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 20px 0 20px 0;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+#yourCart {
+  background-color: #464683;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 20px 0 20px 0;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  text-align: center;
+}
+
+#first {
+  margin-bottom: 50px;
+  background-color: #f3eaf1;
+}
+
+#second {
+  background-color: #f3eaf1;
+}
+
+#infoCart {
   text-align: center;
 }
 
@@ -193,30 +229,37 @@ h2 {
 }
 #contactInput input {
   margin: 10px;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 #submit {
   text-align: center;
   margin-top: 20px;
+  background-color: #464683;
+  width: 100%;
+  padding: 30px 0 30px 0;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 #submit a {
-  background-color: red;
+  background-color: #64b66f;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   font-weight: bolder;
   color: white;
-  border: 2px solid transparent;
+  border: 2px solid white;
   border-radius: 10px;
   transition: all 0.4s;
+  width: 100%;
 }
 #submit a:hover {
-  border: 2px solid white;
-  background-color: #068a22;
+  background-color: #025514;
   box-shadow: 2px 2px 8px #4e0901;
 }
 
 #clearCart {
-  margin-bottom: 15px;
+  margin: 30px;
 }
 #clearCart p {
   background: red;
@@ -225,9 +268,9 @@ h2 {
   border-radius: 15px;
   display: inline;
   cursor: pointer;
+  border: 1px solid black;
 }
 #clearCart p:hover {
-  background-color: #068a22;
   box-shadow: 2px 2px 8px #4e0901;
 }
 
@@ -255,7 +298,7 @@ h2 {
   flex-direction: column;
   text-decoration: none;
   color: white;
-  background-color: #500901;
+  background-color: #464683;
   border: 1px solid transparent;
   border-radius: 15px;
   box-shadow: 2px 2px 2px transparent;
@@ -263,6 +306,7 @@ h2 {
 }
 #teddies a:hover {
   background-color: #be0901;
+  transform: scale(1.05);
   /*border: 1px solid rgb(78, 9, 1);
   box-shadow: 2px 2px 2px rgb(78, 9, 1);*/
 }
@@ -279,17 +323,24 @@ h2 {
 
 #only {
   display: flex;
-  margin: 60px 200px 0 200px;
+  margin: 60px 200px 0 150px;
   border: 1px solid transparent;
   border-radius: 15px;
   box-shadow: 2px 2px 2px transparent;
+  padding-bottom: 100px;
+  margin-bottom: 50px;
 }
 #only p {
   margin: 10px 0 10px 0;
 }
 
+#text {
+  display: flex;
+  flex-direction: column;
+}
+
 label {
-  margin-right: 20px;
+  margin: 20px 0 20px 0;
 }
 
 #quantity {
@@ -301,11 +352,13 @@ label {
   padding: 10px;
   color: white;
   border-radius: 10px;
-  display: inline-flex;
+  text-align: center;
+  margin: auto;
   cursor: pointer;
-  background-color: #464683;
-  position: relative;
-  top: 50px;
+  background-color: #793326;
+}
+#addTeddy:hover {
+  background-color: #b3240b;
 }
 
 /*** colors ***/
