--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -11,13 +11,15 @@
         flex-direction: column;
         text-decoration: none;
         color: white;
-        background-color: rgb(80, 9, 1);
+       // background-color: rgb(80, 9, 1);
+       background-color: rgb(70, 70, 131);
         border: 1px solid transparent;
         border-radius: 15px;
         box-shadow: 2px 2px 2px transparent;
         transition: all 0.3s;
         &:hover {
             background-color:  rgb(190, 9, 1);
+            transform: scale(1.05);
            /*border: 1px solid rgb(78, 9, 1);
            box-shadow: 2px 2px 2px rgb(78, 9, 1);*/    
         }
@@ -38,17 +40,24 @@
 
 #only {
     display: flex;
-    margin: 60px 200px 0 200px;
+    margin: 60px 200px 0 150px;
     border: 1px solid transparent;
     border-radius: 15px;
     box-shadow: 2px 2px 2px transparent;
+    padding-bottom: 100px;
+    margin-bottom: 50px;
     p {
         margin: 10px 0 10px 0;
     }
 }
 
+#text {
+    display: flex;
+    flex-direction: column;
+}
+
 label {
-    margin-right: 20px;
+    margin: 20px 0 20px 0;
 }
 #quantity {
     width: 50px;
@@ -60,10 +69,12 @@ label {
     padding: 10px;
     color: white;
     border-radius: 10px;
-    display:inline-flex;
+   text-align: center;
+   margin: auto;
     cursor: pointer;
-    background-color: rgb(70, 70, 131);
-    position: relative;
-    top: 50px;
+    background-color: rgb(121, 51, 38);
+    &:hover {
+        background-color: rgb(179, 36, 11);
+    }
 }
 
