--- a/frontend/sass/layouts/_footer.scss
+++ b/frontend/sass/layouts/_footer.scss
@@ -1,5 +1,6 @@
 footer {
-    background-color: rgb(90, 9, 1);
+    //background-color: rgb(90, 9, 1);
+    background-color: rgb(70, 70, 131);
     padding: 20px;
     position: absolute;
     bottom: 0;
