--- a/frontend/sass/layouts/_header.scss
+++ b/frontend/sass/layouts/_header.scss
@@ -1,5 +1,6 @@
 header  {
-    background-color: rgb(90, 9, 1);
+   // background-color: rgb(90, 9, 1);
+   background-color: rgb(70, 70, 131);
     padding: 15px;
     img {  
         margin-left: 10px;  
