--- a/frontend/sass/pages/_cart.scss
+++ b/frontend/sass/pages/_cart.scss
@@ -1,8 +1,8 @@
 #cart {
-    background-color: rgb(243, 234, 241);
+    
     margin: 60px 150px 200px 150px;
     border-radius: 15px;
-    padding: 20px;
+   // padding: 20px;
     padding-bottom: 60px;
 }
 
@@ -28,46 +28,96 @@
 #total {
     margin-top: 30px;
     text-align: center;
+    background-color: rgb(70, 70, 131);
+    color:white;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 20px 0 20px 0;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
-#contact, #yourCart{
+#contact{
     p {
         text-align: center;
+        background-color: rgb(70, 70, 131);
+    color:white;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 20px 0 20px 0;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
     }
+}
+
+#yourCart {
+    background-color: rgb(70, 70, 131);
+    color:white;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 20px 0 20px 0;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    text-align: center;
+
+}
+
+
+
+#first {
+    margin-bottom: 50px;
+    background-color: rgb(243, 234, 241);
+}
+
+#second {
+    background-color: rgb(243, 234, 241);
+}
+
+#infoCart {
+    text-align: center;
 }
 
 #contactInput {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
     input {
         margin: 10px;
+        padding: 5px;
+        border-radius: 5px;
     }
 }
 
 #submit {
     text-align: center;
     margin-top: 20px;
+    background-color: rgb(70, 70, 131);
+    width: 100%;
+    padding: 30px 0 30px 0;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
     
     a {
-        background-color: red;
+        background-color: rgb(100, 182, 111);
         padding: 10px 20px 10px 20px;
         text-decoration: none;
         font-weight: bolder;
         color: white;
-        border: 2px solid transparent;
+        border: 2px solid white;
         border-radius: 10px;
         transition: all 0.4s;
+        width: 100%;
         &:hover {
-            border: 2px solid white;
-            background-color: rgb(6, 138, 34);    
+            
+            background-color: rgb(2, 85, 20);    
             box-shadow: 2px 2px 8px rgb(78, 9, 1);      
         }
     } 
 }
 
 #clearCart {
-    margin-bottom: 15px;
+    margin: 30px;   
     p {
         background: red;
         color: white;
@@ -75,9 +125,9 @@
         border-radius: 15px;
         display: inline;
         cursor: pointer;
-        &:hover {
-            background-color: rgb(6, 138, 34);    
-            box-shadow: 2px 2px 8px rgb(78, 9, 1); 
+        border: 1px solid black;
+        &:hover {    
+            box-shadow: 2px 2px 8px rgb(78, 9, 1);   
         }
         
     }
