--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -208,7 +208,7 @@ h2 {
   color: white;
 }
 
-#errorIndex {
+.errorIndex {
   margin-top: 100px;
   font-size: 20px;
   text-align: center;
@@ -293,7 +293,7 @@ h2 {
   height: 30px;
   width: 150px;
   position: relative;
-  bottom: 200px;
+  bottom: 150px;
   left: 200px;
   border-radius: 15px;
   opacity: 0.8;
@@ -319,12 +319,6 @@ h2 {
   animation: show 4s ease-in-out;
 }
 
-/*.showInfoAdd {
-    opacity: 1;
-    color : white;
-    background-color: rgb(179, 36, 11);
-    transition: all 0.5s;
-}*/
 #contactInput {
   display: flex;
   flex-direction: column;
@@ -427,16 +421,12 @@ h2 {
 
 #only {
   display: flex;
-  margin: 60px 200px 0 50px;
+  margin: 60px 50px 0 50px;
   border: 1px solid transparent;
   border-radius: 15px;
   box-shadow: 2px 2px 2px transparent;
   padding-bottom: 150px;
   margin-bottom: 50px;
-  width: 70%;
-}
-#only p {
-  margin: 10px 0 10px 0;
 }
 
 #text {
@@ -446,10 +436,14 @@ h2 {
   background-color: #f3eaf1;
   padding: 20px;
   border-radius: 15px;
+  font-weight: bold;
+}
+#text p {
+  margin-bottom: 5px;
 }
 
 label {
-  margin: 20px 0 20px 0;
+  margin: 10px 0 10px 0;
 }
 
 #quantity {
@@ -457,9 +451,11 @@ label {
 }
 
 #addTeddy {
+  width: 30%;
   margin: 0;
-  border: 1px solid black;
   padding: 10px;
+  position: relative;
+  top: 50px;
   color: white;
   border-radius: 10px;
   text-align: center;
