--- a/frontend/sass/components/_article.scss
+++ b/frontend/sass/components/_article.scss
@@ -40,16 +40,13 @@
 
 #only {
     display: flex;
-    margin: 60px 200px 0 50px;
+    margin: 60px 50px 0 50px;
     border: 1px solid transparent;
     border-radius: 15px;
     box-shadow: 2px 2px 2px transparent;
     padding-bottom: 150px;
     margin-bottom: 50px;
-    width: 70%;
-    p {
-        margin: 10px 0 10px 0;
-    }
+    
 }
 
 #text {
@@ -59,10 +56,14 @@
     background-color: rgb(243, 234, 241);
     padding: 20px;
     border-radius: 15px;
+    font-weight: bold;
+    p {
+        margin-bottom: 5px;
+    }
 }
 
 label {
-    margin: 20px 0 20px 0;
+    margin: 10px 0 10px 0;
 }
 #quantity {
     width: 50px;
@@ -70,12 +71,14 @@ label {
 }
 
 #addTeddy {
+    width: 30%;
     margin: 0;
-    border: 1px solid black;
     padding: 10px;
+    position: relative;
+    top: 50px;
     color: white;
     border-radius: 10px;
-   text-align: center;
+    text-align: center;
     cursor: pointer;
     background-color: rgb(70, 70, 131);
     &:hover {
