--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -25,6 +25,10 @@ header img {
   padding: 5px;
 }
 
+.back {
+  display: flex;
+}
+
 nav {
   margin-right: 20px;
   display: flex;
@@ -296,7 +300,6 @@ h2 {
   bottom: 150px;
   left: 200px;
   border-radius: 15px;
-  background-color: #b3240b;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -309,7 +312,7 @@ h2 {
   20% {
     opacity: 1;
     color: white;
-    background-color: #b3240b;
+    background-color: green;
   }
   100% {
     opacity: 0;
@@ -370,6 +373,15 @@ h2 {
 }
 #clearCart p:hover {
   box-shadow: 2px 2px 8px #4e0901;
+}
+
+input:invalid {
+  background-color: red;
+  opacity: 0.8;
+}
+
+input:valid {
+  border: 1px solid green;
 }
 
 @media only screen and (max-width: 799px) {
@@ -451,7 +463,6 @@ h2 {
 
 label {
   margin: 10px 0 10px 0;
-  padding: 20px;
 }
 
 #quantity {
