--- a/frontend/sass/pages/_cart.scss
+++ b/frontend/sass/pages/_cart.scss
@@ -90,7 +90,7 @@
     bottom: 150px;
     left: 200px;
     border-radius: 15px;
-    background-color: rgb(179, 36, 11);
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,7 +104,7 @@
     20% {
         opacity: 1;
         color : white;
-        background-color: rgb(179, 36, 11);
+        background-color: green;
     }
     100% {
         opacity: 0;
@@ -174,6 +174,15 @@
     }
 }
 
+input:invalid {
+    background-color: red;
+    opacity: 0.8;
+}
+
+input:valid {
+    border: 1px solid green;
+}
+
 
 @media only screen and (max-width: 799px) {
 
@@ -181,8 +190,7 @@
         position: relative;
         bottom: 0;
         left: 50%;
-        
-
-        
     }
+
+    
 }
